--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             console.log("load")
         })
     </script>
-    <script src="index.js"></script>
+    <script async src="index.js"></script>
 </head>
 <body>
     
