--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             console.log("load")
         })
     </script>
-    <script src="index.js"></script>
+    <script defer src="index.js"></script>
 </head>
 <body>
     
