--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
                 const script = document.createElement("script")
                 script.setAttribute("src", "dependency.js")
                 script.setAttribute("async", "true")
-                document.body.appendChild(script)
+                setTimeout(() => {
+                    document.body.appendChild(script)
+                })
             }
         })
         window.addEventListener("DOMContentLoaded", () => {
